# titanverifier

./: .gitignore  GHOST_PROTOCOL_RESEARCH.md  README.md  SPARRING_FIXES.md  STEALTH_PLAN.md  TITAN_CONTEXT.md  automate_titan.py  build.gradle.kts  gradle.properties  gradlew  identities.json  identity_factory.py  local.properties  requirements.txt  runtime-permissions-patched.xml  settings.gradle.kts  setup_termux.sh  titan.db  titan.db-shm  titan.db-wal  verify_hooks.py
.cursor/rules/: Custom-Android-Module-Spoofing-Rule-Fundament.mdc  titan-engine-flow-constraints.mdc
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: xposed_init
app/src/main/cpp/: CMakeLists.txt  audit_engine.cpp  native-lib.cpp
app/src/main/kotlin/com/oem/hardware/service/: AuditEngine.kt  AuditExporter.kt  GroundTruthModels.kt  MainActivity.kt  NativeEngine.kt  RootShell.kt  SecurityAuditScreen.kt  SecurityCard.kt
app/src/main/kotlin/com/oem/hardware/service/xposed/: DataAccessMonitor.kt  ServiceConfigReader.kt  TelephonyServiceModule.kt
app/src/main/kotlin/com/titan/verifier/: AuditEngine.kt  AuditExporter.kt  GroundTruthModels.kt  MainActivity.kt  NativeEngine.kt  RootShell.kt  SecurityAuditScreen.kt  SecurityCard.kt
app/src/main/kotlin/com/titan/verifier/xposed/: TitanBridgeReader.kt  TitanXposedModule.kt
app/src/main/res/values/: arrays.xml  colors.xml  strings.xml  themes.xml
build_native/: CMakeCache.txt  Makefile  cmake_install.cmake
common/: hw_compat.cpp  hw_compat.h  hw_ids.h  titan_hardware.cpp  titan_hardware.h  titan_ids.h
docs/: FRESH_SETUP_GUIDE.md  GMSFIX-2026-02-17.md  REFACTORING-TERMUX-2026-02-21.md  supabase_schema.sql
host/: __init__.py  config.py  database.py  main.py
host/adb/: __init__.py  client.py  device.py  local_client.py
host/api/: __init__.py  control.py  dashboard.py  sync.py  vault.py
host/engine/: __init__.py  auditor.py  db_ops.py  hookguard.py  identity_engine.py  injector.py  network.py  shifter.py  supabase_sync.py
host/flows/: __init__.py  genesis.py  switch.py
host/frontend/templates/: dashboard.html  vault.html
host/models/: __init__.py  account.py  history.py  identity.py
host/tests/: __init__.py  test_identity_engine.py
include/: dobby.h  zygisk.hpp
libs/dobby/: BUILD_DOBBY.md
module/: CMakeLists.txt  main.cpp  post-fs-data.sh  service.sh  zygisk_module.cpp
module/assets/: clean_input_devices.txt  fake_cpuinfo.txt  fake_version.txt
